# macro-center

./: .gitignore  Cargo.toml  Trunk.toml  index.html  package.json  rust-toolchain.toml  styles.css  tsconfig.json
release/src/: main.rs
src/: app.rs  index.css  main.rs  nodes-and-edges.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: TurboEdge.svelte  TurboNode.svelte
src/routes/: +page.svelte
